# gst-demo

./: LICENSE  README.md
apps/appsink_pull/: CMakeLists.txt  main.cpp
apps/appsrc_appsink/: CMakeLists.txt  main.cpp
apps/appsrc_pull/: CMakeLists.txt  main.cpp
apps/appsrc_push/: CMakeLists.txt  main.cpp
apps/demo_app/: CMakeLists.txt  main.c  main.cpp
apps/get_set_cap/: CMakeLists.txt  main.cpp
apps/launch_app/: CMakeLists.txt  main.cpp
